--- a/NewsTagil/src/main/res/values/strings.xml
+++ b/NewsTagil/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
+<!-- -->
     <string name="app_name">TagilNews</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world"><u>Hello world!</u></string>
+
     <string name="favorite">Избранное</string>
     <string name="title_activity_hello">Hello</string>
-    <string name="ServerAddress">http://192.168.1.110/</string>
+    <string name="serverAddress">http://192.168.1.110/</string>
     <string name="loginUrl">login.php</string>
     <string name="registrationUrl">registration.php</string>
     <string name="login_error">Логин или пароль указаны неверно</string>
