--- a/NewsTagil/src/main/res/values/strings.xml
+++ b/NewsTagil/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
 <resources>
 <!-- -->
     <string name="app_name">TagilNews</string>
+    <string name="action_settings">Settings</string>
     <string name="favorite">Избранное</string>
     <string name="serverAddress">http://192.168.1.110/</string>
     <string name="loginUrl">login.php</string>
