--- a/NewsTagil/src/main/res/values/strings.xml
+++ b/NewsTagil/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name">TagilNews</string>
     <string name="action_settings">Settings</string>
     <string name="favorite">Избранное</string>
-    <string name="serverAddress">http://192.168.1.110/</string>
+    <string name="serverAddress">http://etd-host.ru.xsph.ru/</string>
     <string name="loginUrl">login.php</string>
     <string name="getNewsHeadersUrl">get_news_headers.php</string>
     <string name="getTotalIdCountUrl">get_total_id_count.php</string>
