Переверестан composite_make_ads

--- a/NewsTagil/src/main/res/values/strings.xml
+++ b/NewsTagil/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="instructionText">Инструкция</string>
     <string name="createAdvertText">Создать объявление</string>
     <string name="myAdvertText">Мои объявления</string>
-
+    <string name="AddPhoto">"Добавить \n    фото"</string>
     <string name="delText">Удалить</string>
     <string name="editText">Редактировать</string>
     <string name="startDialogText">Диалог</string>
