--- a/NewsTagil/src/main/res/values/strings.xml
+++ b/NewsTagil/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="delText">Удалить</string>
     <string name="editText">Редактировать</string>
     <string name="startDialogText">Диалог</string>
-
+    <string name="SetFiledsWarning">Заполните поля!</string>
     <string name="serverAddress">http://192.168.1.110/</string>
     <string name="loginUrl">login.php</string>
     <string name="getNewsHeadersUrl">get_news_headers.php</string>
