--- a/NewsTagil/src/main/res/values/strings.xml
+++ b/NewsTagil/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="getMyAdvertsHeadersUrl">get_my_adverts_headers.php</string>
     <string name="getCommentsUrl">get_comments.php</string>
     <string name="getFavoritesUrl">get_favorites.php</string>
+    <string name="getUsersUrl">get_users.php</string>
     <string name="getNewsUrl">get_news.php</string>
     <string name="registrationUrl">registration.php</string>
     <string name="getInterlocutorsUrl">get_interlocutors.php</string>
