--- a/NewsTagil/src/main/res/values/strings.xml
+++ b/NewsTagil/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 <!-- -->
+    <string name="addMsgError">При добавлении сообщения возникла ошибка.</string>
+    <string name="emptyMsg">Нельзя отправить пустое сообщение!</string>
     <string name="app_name">TagilNews</string>
     <string name="action_settings">Settings</string>
     <string name="favorite">Избранное</string>
