--- a/NewsTagil/src/main/res/values/strings.xml
+++ b/NewsTagil/src/main/res/values/strings.xml
@@ -62,19 +62,34 @@
     <string name="message_font_size_changed">Размер шрифта успешно изменен</string>
     <string name="message_font_type_changed">Тип шрифта успешно изменен!</string>
     <string name="addPersonalInfo">add_personal_info.php</string>
-    <string name="seek">Ищу</string>
+
     <string name="save">Сохранить</string>
-    <string name="man">Парня</string>
-    <string name="woman">Девушку</string>
-    <string name="not_insatalled">Не установленно</string>
+
+    <string name="seek">Ищу</string>
+    <string-array name="seek">
+        <item>Парня</item>
+        <item>Девушку</item>
+        <item>Не установленно</item>
+    </string-array>
+
     <string name="purpose_for_seek">Цели знакомства</string>
-    <string name="family">Семья</string>
-    <string name="communication">Общение</string>
-    <string name="sex">Секс</string>
-    <string name="dosug">Совместный досуг</string>
-    <string name="in_marriage">В браке</string>
-    <string name="not_in_marriage">Свободен(-a)</string>
+    <string-array name="purpose">
+        <item>Семья</item>
+        <item>Общение</item>
+        <item>Секс</item>
+        <item>Совместный досуг</item>
+        <item>Не установленно</item>
+    </string-array>
+
+    <string name="marriage">Семейное положение</string>
+    <string-array name="marriage">
+        <item>В браке</item>
+        <item>Свободен(-a)</item>
+        <item>Не установленно</item>
+    </string-array>
+
     <string name="delAdvertUrl">del_advert.php</string>
     <string name="updateAdvertUrl">update_advert.php</string>
-
+    <string name="getProfile">get_profile.php</string>
+    <string name="personalInfoChanged">Изменения успешно внесенны</string>
 </resources>
